--- a/styles/style.css
+++ b/styles/style.css
@@ -1,123 +1,13 @@
-* {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  background-color: #f5f5f5;
-  /* width: 1000px; */
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #ffffff;
-  height: 80px;
-  padding: 0px 80px;
-}
-
-.logo img {
-  width: 100px;
-  height: auto;
-}
-
-.circle-icon {
-  display: flex;
-  vertical-align: middle;
-  justify-content: center;
-  align-items: center;
-  background-color: #283841;
-  color: #283841;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.icon {
-  color: #fff;
-}
-
-.page-container {
-  max-width: 1100px;
-  margin: 40px auto;
-}
-
-.categories {
-  display: flex;
-  gap: 8px;
-  margin-bottom: 24px;
-}
-
-.categories button {
-  background-color: #fff;
-  border: 1px solid #e4e4e4;
-  text-transform: capitalize;
-  padding: 8px 16px;
-}
-
-input {
-  height: 24px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  text-align: center;
-  font-size: 16px;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-h4, h5 {
-  font-weight: 600;
-}
-
-h3 {
-  font-size: 24px;
-  font-weight: 700;
-}
-
-/* h4 {
-    font-size: 20px;
-} */
-.tootevalik {
-  margin-top: 40px;
-  color: #111;
-}
-
-h2 {
-  margin-bottom: 24px;
-}
-
-#empty-cart {
-  margin-top: 24px;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 .product-list {
   display: grid;
-  gap: 10px;
+  gap: 16px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-bottom: 40px;
 }
 
-button {
-  border: none;
-  border-radius: 4px;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  font-size: 14px;
-  letter-spacing: 1px;
-  /* text-transform: uppercase; */
-  font-weight: 600;
-}
-
-.product-container {
+.product-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -127,26 +17,6 @@ button {
   padding: 24px;
   background-color: white;
   gap: 16px;
-  border: 1px solid #e4e4e4;
-}
-
-.product-container:hover {
-  border: 1px solid #c4c4c4;
-}
-
-.product-container .primary-btn {
-  background-color: #1d4da7;
-  color: #ffffff;
-  width: 100%;
-  padding: 12px 24px;
-}
-
-.product-container .secondary-btn {
-  background-color: #eee;
-  border: none;
-  color: #283841;
-  width: 100%;
-  padding: 12px 24px;
 }
 
 .product-image {
@@ -158,14 +28,54 @@ button {
 
 .product-title {
   font-size: 16px;
-  font-weight: 600;
-  color: #283841;
+  font-weight: 700;
+  color: #21263a;
 }
 
 .product-price {
   font-size: 24px;
   font-weight: 700;
-  color: #283841;
+  color: #e27d3f;
+}
+
+.product-page-card {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 40px;
+  min-height: 560px;
+}
+
+.product-page-image {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-page-card img {
+  width: 100%;
+  height: auto;
+}
+
+.product-page-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 80px;
+  gap: 16px;
+  width: 50%;
+}
+
+.product-desc {
+  color: #666666;
+  font-size: 16px;
+  line-height: 26px;
+  text-transform: capitalize;
+  font-weight: 400;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .product-content-div {
@@ -176,24 +86,37 @@ button {
   width: 100%;
 }
 
-.secondary-btn {
-  background-color: transparent;
-  border: 1px solid #1d4da7;
-  color: #1d4da7;
-  padding: 12px 24px;
+.circle-icon {
+  position: relative;
 }
 
-.disabled {
-  background-color: #ccc;
-  color: #666;
-  cursor: not-allowed;
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: #e27d3f;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  font-weight: bold;
+  display: none; /* Hidden by default */
 }
 
-.remove-btn {
-  padding: 2px 8px;
-  height: 24px;
-  border-radius: 4px;
-  background-color: #fc7979;
+.circle-icon {
+  display: flex;
+  vertical-align: middle;
+  justify-content: center;
+  align-items: center;
+  background-color: #21263a;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.icon {
   color: #fff;
 }
 
@@ -201,34 +124,224 @@ button {
   background-color: #fff;
   padding: 24px;
   border-radius: 8px;
-  border: 1px solid #e4e4e4;
+  max-width: 1440px;
 }
 
-.ostukorv {
-  background-color: #fff;
-  padding: 24px;
-  border-radius: 8px;
-  border: 1px solid #e4e4e4;
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  min-height: 40px;
+  padding: 8px 0px;
+  align-items: center;
+  border-bottom: 1px solid #d7d8e1;
+}
+
+.cart-item-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  margin-right: 16px;
+  width: 100%;
+  font-weight: 600;
+  color: #21263a;
+}
+
+.cart-item-product-title {
+  width: 80%;
+}
+
+.cart-item-product-price {
+  width: 10%;
+}
+
+input {
+  height: 24px;
+  border-radius: 4px;
+  border: 1px solid #d7d8e1;
+  text-align: center;
+  font-size: 16px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .ostukorv h2 {
   margin-bottom: 24px;
 }
 
-.cart-item {
+.cart-total {
+  margin-top: 24px;
+}
+
+#empty-cart {
+  margin-top: 24px;
+}
+
+.categories {
   display: flex;
-  gap: 8px;
-  color: #283841;
-  font-weight: 600;
-  margin: auto;
+  gap: 16px;
+  margin-bottom: 24px;
+}
+
+.cat-btn {
+  background-color: #fff;
+  color: #21263a;
+  border-radius: 8px;
+  text-transform: capitalize;
+  padding: 8px 16px;
+}
+
+.cat-btn.active {
+  background-color: #21263a;
+  color: #fff;
+}
+
+button {
+  border: none;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+.primary-btn {
+  background-color: transparent;
+  border-radius: 999px;
+  border: 2px solid #21263a;
+  color: #21263a;
+  padding: 12px 24px;
+}
+
+.primary-btn:hover {
+  background-color: #21263a;
+  color: #ffffff;
+  padding: 12px 24px;
+}
+
+.remove-btn {
+  padding: 0px 6px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: #21263a;
+  color: #fff;
+  line-height: 0px;
 }
 
 #footer {
-  background-color: #283841;
-  color: #fff;
-  height: 80px;
+  background-color: #21263a;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: #faf0ea;
+}
+
+.footer-content {
+  max-width: 1440px;
+  box-sizing: border-box;
+  padding: 0px 24px;
+  margin: 40px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-title {
+  font-size: 16px;
+  text-transform: uppercase;
+  font-family: "Noto Sans", sans-serif;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+.nav-ul {
+  list-style: none;
+}
+
+.nav-ul li {
+  margin-bottom: 8px;
+}
+
+.nav-ul li a {
+  text-decoration: none;
+  color: #faf0ea;
+  font-family: "Noto Sans", sans-serif;
+  font-size: 14px;
+}
+
+.copyright {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
   font-size: 14px;
+}
+
+* {
+  font-family: "Quicksand", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #faf0ea;
+  min-height: 100vh;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: #ffffff;
+}
+
+nav {
+  max-width: 1440px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  padding: 0px 24px;
+  margin: 0 auto;
+}
+
+.logo img {
+  width: 100px;
+  height: auto;
+  cursor: pointer;
+}
+
+.page-container {
+  max-width: 1440px;
+  min-height: 70vh;
+  margin: 40px auto;
+  padding: 0px 24px;
+}
+
+.banner img {
+  margin-bottom: 40px;
+  border-radius: 8px;
+  width: 100%;
+  height: auto;
+}
+
+h4,
+h5 {
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.tootevalik h2 {
+  color: #21263a;
+}
+
+h2 {
+  margin-bottom: 24px;
 }/*# sourceMappingURL=style.css.map */
